--- a/src/main/webapp/book_all.html
+++ b/src/main/webapp/book_all.html
@@ -62,9 +62,9 @@
 			<section class="breadcrumbs">
 				<div class="container">
 					<ul class="horizontal_list clearfix bc_list f_size_medium">
-						<li class="m_right_10"><a href="index.html" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
+						<li class="m_right_10"><a href="index.jsp" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
 						<li class="m_right_10"><a href="book_detail.html" class="current default_t_color">Book Detail<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
-						<li><a href="book_reserver.html" class="current default_t_color">All Volume</a></li>
+						<li><a href="#" class="current default_t_color">All Volume</a></li>
 					</ul>
 				</div>
 			</section>
