--- a/src/main/webapp/return.html
+++ b/src/main/webapp/return.html
@@ -116,24 +116,15 @@
                                     	<table style="font-size:16px">
                                         	<tr class="m_bottom_25">
                                             	<td width="200" height="50" align="right" valign="middle">
-                                                	<label class="required d_inline_b m_bottom_5">ISBN</label>
+                                                	<label class="required d_inline_b m_bottom_5">Book ID</label>
                                                 </td>
                                                 <td width="40" height="50" align="right" valign="middle">
                                                 </td>
                                                 <td width="300" height="50" align="left" valign="middle">
-                                                	<input type="text" id="ISBN" name="cf_name" class="full_width r_corners">
+                                                	<input type="text" id="book_id" name="cf_name" class="full_width r_corners">
                                                 </td>
                                             </tr>
-                                            <tr class="m_bottom_25">
-                                            	<td width="200" height="50" align="right" valign="middle">
-                                                	<label class="required d_inline_b m_bottom_5">User ID</label>
-                                                </td>
-                                                <td width="40" height="50" align="right" valign="middle">
-                                                </td>
-                                                <td width="300" height="50" align="left" valign="middle">
-                                                	<input type="text" id="UserID" name="cf_name" class="full_width r_corners">
-                                                </td>
-                                            </tr>
+                                        
                                             
                                             <tr class="m_bottom_25">
                                             	<td width="100" height="20" align="right" valign="middle">
