--- a/src/main/webapp/admin_recom.html
+++ b/src/main/webapp/admin_recom.html
@@ -60,8 +60,8 @@
 			<section class="breadcrumbs">
 				<div class="container">
 					<ul class="horizontal_list clearfix bc_list f_size_medium">
-						<li class="m_right_10"><a href="#" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
-						<li><a href="admin_newsManage.html" class="current default_t_color">Recommendation Management</a></li>
+						<li class="m_right_10"><a href="admin_info.jsp" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
+						<li><a href="#" class="current default_t_color">Recommendation Management</a></li>
 					</ul>
 				</div>
 			</section>
