--- a/src/main/webapp/books_delete.html
+++ b/src/main/webapp/books_delete.html
@@ -53,24 +53,13 @@
 							</ul>
 						</nav>
 					</div>
-					<!--search form-->
-					<div class="searchform_wrap tf_xs_none tr_all_hover">
-						<div class="container vc_child h_inherit relative">
-							<form role="search" class="d_inline_middle full_width">
-								<input type="text" name="search" placeholder="Type text and hit enter" class="f_size_large">
-							</form>
-							<button class="close_search_form tr_all_hover d_xs_none color_dark">
-								<i class="fa fa-times"></i>
-							</button>
-						</div>
-					</div>
 				</section>
 			</header>
 			<!--breadcrumbs-->
 			<section class="breadcrumbs">
 				<div class="container">
 					<ul class="horizontal_list clearfix bc_list f_size_medium">
-						<li class="m_right_10 current"><a href="#" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
+						<li class="m_right_10 current"><a href="user_info.jsp" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
 						<li><a href="#" class="default_t_color">Books Management</a></li>
 					</ul>
 				</div>
@@ -116,16 +105,16 @@
                                 	    	<br>
 											<div>
 												<form style="margin:30px 50px">
-													<div  class="custom_select f_size_medium relative f_left">
+													<!--<div  class="custom_select f_size_medium relative f_left">
 														<div style="padding:6px 35px 3px 12px;height:34px;" class="select_title r_corners relative color_dark">Book ID</div>
 														<ul class="select_list d_none"></ul>
 														<select name="type">
 															<option value="Book ID">Book ID</option>
 															<option value="ISBN">ISBN</option>
 														</select>
-													</div>
-													<input name="input" autocomplete="off" class=" r_corners" style="width:65%; height:34px; padding:5px 10px;font-size:16px;" > &nbsp;
-													<button style="height:30px;vertical-align:middle;padding-top:5px;margin-top:-5px" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
+													</div>-->
+													<input id="isbn" name="input" placeholder="please input ISBN" autocomplete="off" class=" r_corners" style="width:65%; height:34px; padding:5px 10px;font-size:16px;" > &nbsp;
+													<button onclick="deleteBook()" style="height:30px;vertical-align:middle;padding-top:5px;margin-top:-5px" class="button_type_4 bg_scheme_color r_corners tr_all_hover color_light mw_0 m_sm_bottom_0 d_sm_inline_middle">Delete</button>
 													<div id="colorpanel" style="position:absolute;display:none;width:253px;height:177px;"></div>
 													<div id="details" style="display:none;font-size:14px;width:400px;position:absolute;z-index:10000;background:#fff;border:1px solid #aaa" ></div>
 												</form>
@@ -179,6 +168,34 @@
 		</div>
 
 		<button class="t_align_c r_corners tr_all_hover type_2 animate_ftl" id="go_to_top"><i class="fa fa-angle-up"></i></button>
+
+		<script>
+			function deleteBook() {
+				if (confirm("Are you sure to delete the E-Res:\n" + $("#isbn").val())) {
+					$.ajax({
+						url: "/BookManage/delete",
+						type: "POST",
+						data:{
+							"ISBN": $("#isbn").val()
+						},
+						success: function (mydata) {
+							if (mydata == "success")
+								alert("Delete Success!");
+							else if(mydata == "error")
+								alert("Delete Failed!\nPlease ensure the ISBN is correct!");
+							else
+								alert(mydata);
+						},
+						error: function () {
+							alert("Request Failed!Please retry it!");
+						}
+					});
+					window.event.returnValue = false;
+				}else{
+					window.event.returnValue = false;
+				}
+			}
+		</script>
 
 		<!--scripts include-->
 		<script src="js/jquery-2.1.0.min.js"></script>
