--- a/src/main/webapp/ebook_add.html
+++ b/src/main/webapp/ebook_add.html
@@ -70,7 +70,7 @@
 			<section class="breadcrumbs">
 				<div class="container">
 					<ul class="horizontal_list clearfix bc_list f_size_medium">
-						<li class="m_right_10 current"><a href="#" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
+						<li class="m_right_10 current"><a href="admin_info.jsp" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
 						<li><a href="#" class="default_t_color">E-Resource Management</a></li>
 					</ul>
 				</div>
