--- a/src/main/webapp/user_register.html
+++ b/src/main/webapp/user_register.html
@@ -145,7 +145,7 @@
 												<td class="mycss_3">
 													<input type="password" name="cfpwd" class="full_width r_corners" autocomplete="off" >
 												</td>
-												<td class="mycss_3_hidden">
+												<td class="mycss_3_hidden" id = "cfinfo">
 													<label class="m_bottom_5 d_inline_b"></label>
 												</td>
 											</tr>
