修改changepwd.jsp页面为ajax发送请求; 修复recommendation.html无发提交的bug; user_forms.jsp添加推荐表的查询; 读者个人信息显示罚款，完善罚款功能;; 修改HibernateDAO的findCountBySql(final String); 完善了提示信息

--- a/src/main/webapp/recommendation.html
+++ b/src/main/webapp/recommendation.html
@@ -141,7 +141,7 @@
                                         <p class="color_dark m_bottom_25">Thank you for recommending books!</p>
                                     </li>
                                     <li class="t_align_c">
-                                        <button class="button_type_8 r_corners bg_scheme_color color_light tr_all_hove">Submit</button>
+                                        <button id="rec_button" type="button" class="button_type_8 r_corners bg_scheme_color color_light tr_all_hove">Submit</button>
                                     </li>
                                     <li class="t_align_c">
                                         <h2 class="tt_uppercase color_dark m_bottom_25">&nbsp </h2>
@@ -205,6 +205,7 @@
 <!--scripts include-->
 <script src="js/jquery-2.1.0.min.js"></script>
 <script src="js/user_nav.js"></script>
+<script src="js/jquery.form.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/retina.js"></script>
 <script src="js/waypoints.min.js"></script>
