--- a/src/main/webapp/book_all.html
+++ b/src/main/webapp/book_all.html
@@ -2,7 +2,7 @@
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 	<head>
-		<title>Slibrary - News Detail</title>
+		<title>All Volume</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!--meta info-->
@@ -63,7 +63,7 @@
 				<div class="container">
 					<ul class="horizontal_list clearfix bc_list f_size_medium">
 						<li class="m_right_10"><a href="index.jsp" class="default_t_color">Home<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
-						<li class="m_right_10"><a href="book_detail.html" class="current default_t_color">Book Detail<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
+						<li class="m_right_10"><a href="#" class="current default_t_color">Book Detail<i class="fa fa-angle-right d_inline_middle m_left_10"></i></a></li>
 						<li><a href="#" class="current default_t_color">All Volume</a></li>
 					</ul>
 				</div>
